src/test/pass/basic_syntax/tuple_defaulting.lly
enum class Option[A] {
	Some(A),
	None
}

var t: tuple[Option[integer]] = <[Some(10)]>
var t2: tuple[any] = <[None]>
var t3: tuple[any] = <[5]>

var t4: tuple[any] = <[ [t, t2, t3] ]>
