src/test/fail/match_bad_decompose.lly
#[
SyntaxError: Expected '(', not :.
Where: File "test/fail/match_bad_decompose.lly" at line 14
]#

enum class Option[A] {
    Some(A),
    None
}

var v = None

match v: {
    case Some:
    case None:
}
